# sinyal

./: .gitignore  Cargo.toml  README.md  sample.env
Client/: Login.ui  MainChat.ui  Register.ui  RegisterOTP.ui  RegisterOTPSukses.ui  ResetPasswordMasukEmail.ui  ResetPasswordMasukOTP.ui  ResetPasswordMasukPassword.ui  ResetPasswordMasukPasswordSukses.ui  app.py  history_file.py  main_chat_window.ui  ui_main_chat_window.py
clienttest/: Login.ui  LoginSukses.ui  Register.ui  RegisterOTP.ui  RegisterOTPSukses.ui  ResetPasswordMasukEmail.ui  ResetPasswordMasukOTP.ui  ResetPasswordMasukPassword.ui  ResetPasswordMasukPasswordSukses.ui  app.py  main.py  receive.py  requirements.txt  work.py
src/: main.rs
