[package]
name = "sinyal"
version = "0.1.0"
edition = "2024"

[dependencies]
lettre = "0.11.4" # or latest version
getrandom = "0.3.3" # required if using async runtime
postgres = "0.19"
dotenvy = "0.15"
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
lapin = "2.3"
serde_json = "1.0.140"

[profile.dev]
opt-level = 1
